--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">hitokoto2</string>
+    <string name="facebook_app_id">3067797703546534</string>
 </resources>
